# chequera

./: .gitignore  CHANGELOG.md  LICENSE  chequera.cabal  readme.md  tests.md
.github/workflows/: release-macos-latest.yml  release.yml
app/: Exec.hs  Main.hs  QueryExtractor.hs  QueryParser.hs  Steampipe.hs  Types.hs  readme.md
scripts/: build_linux.sh  build_macos.sh  test.sh
