cabal-version:      3.0
name:               chequera
version:            0.4.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             druchan
maintainer:         chandru89new@gmail.com
-- copyright:
category:           Misc
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable chequera
    import:             warnings
    main-is:            Main.hs
    other-modules:      Steampipe,Exec,QueryExtractor,Types,Paths_chequera
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1,
                        process>=1.6,
                        text,
                        async,
                        split,
                        transformers
                        
    hs-source-dirs:     app
    default-language:   Haskell2010
